Tagpad: Fixed background overflowing its container

--- a/src/sass/formio.form.scss
+++ b/src/sass/formio.form.scss
@@ -1027,6 +1027,7 @@ body.formio-dialog-open {
 .formio-tagpad-background svg {
   width: 100%;
   height: 100%;
+  position: absolute;
 }
 
 .formio-tagpad-form {
